<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/background">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/background"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="umkc.elmp7.climacloset.ClimaClothesActivites.CatalogTopActivity"
        tools:showIn="@layout/activity_catalog_top">

        <Spinner
            android:layout_width="@dimen/component_width"
            android:layout_height="wrap_content"
            android:id="@+id/colorBottomSpinner"
            android:gravity="center"
            android:layout_below="@+id/bottomTypeTextField"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="@dimen/component_width"
            android:layout_height="wrap_content"
            android:id="@+id/bottomTypeTextField"
            android:hint="@string/CATALOG_BOTTOMS_bottomTypeDisplay"
            android:textColorHint="@color/colorAccent"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/colorBottomSpinner"
            android:layout_alignLeft="@+id/colorBottomSpinner"
            android:layout_marginTop="44dp"
            android:textColor="@color/catalog_textview_text"/>


        <EditText
            android:layout_width="@dimen/component_width"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/mintempBottom"
            android:hint="@string/CATALOG_BOTTOMS_minTempDisplay"
            android:textColorHint="@color/colorAccent"
            android:gravity="center"
            android:layout_below="@+id/colorBottomSpinner"
            android:layout_alignStart="@+id/photoBottomButton"
            android:layout_alignLeft="@+id/photoBottomButton"
            android:textColor="@color/catalog_textview_text"/>

        <EditText
            android:layout_width="@dimen/component_width"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/maxtempBottom"
            android:hint="@string/CATALOG_BOTTOMS_maxTempDisplay"
            android:textColorHint="@color/colorAccent"
            android:gravity="center"
            android:layout_below="@+id/mintempBottom"
            android:layout_centerHorizontal="true"
            android:textColor="@color/catalog_textview_text"/>

        <Button
            android:layout_width="@dimen/component_width"
            android:layout_height="wrap_content"
            android:text="@string/take_photo_button"
            android:id="@+id/photoBottomButton"
            android:gravity="center"
            android:layout_below="@+id/maxtempBottom"
            android:layout_alignStart="@+id/maxtempBottom"
            android:layout_alignLeft="@+id/maxtempBottom"
            android:textStyle="bold"
            android:background="@drawable/rounded_button"/>

        <ImageView
            android:layout_width="@dimen/photo_preview_width"
            android:layout_height="@dimen/photo_preview_height"
            android:id="@+id/photoPreviewBottom"
            android:gravity="center"
            android:layout_below="@+id/photoBottomButton"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="@dimen/component_width"
            android:layout_height="wrap_content"
            android:text="@string/submit_button"
            android:id="@+id/submitBottom"
            android:layout_below="@+id/photoPreviewBottom"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textStyle="bold"
            android:background="@drawable/rounded_button"/>

    </RelativeLayout>
</ScrollView>