<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:paddingTop="?attr/actionBarSize">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:padding="5dp"
        >

        <HorizontalScrollView android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >
            <LinearLayout android:id="@+id/browseBottomLayout" android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:padding="5dp"
                android:layout_weight="1">
            </LinearLayout>
        </HorizontalScrollView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/bottomTypeTextView"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/browse_textdisplay"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/colorBottomTextView"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/browse_textdisplay"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/minTempBottomTextView"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/browse_textdisplay"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/maxTempBottomTextView"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/browse_textdisplay"/>
        <Spinner
            android:layout_width="@dimen/component_width"
            android:layout_height="wrap_content"
            android:id="@+id/filterClothingSpinner"
            android:gravity="center"
            android:layout_below="@+id/maxTempBottomTextView"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"/>
        <Button
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="@dimen/component_width"
            android:layout_height="wrap_content"
            android:text="@string/mark_dirty"
            android:id="@+id/markDirtyBottomButton"
            android:layout_below="@+id/filterClothingSpinner"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:background="@drawable/rounded_button"/>
        <Button
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="@dimen/component_width"
            android:layout_height="wrap_content"
            android:text="@string/delete_item"
            android:id="@+id/deleteBottomButton"
            android:layout_below="@+id/markDirty"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:background="@drawable/rounded_button"/>
        <Button
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="@dimen/component_width"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:id="@+id/bottomSendSmsButton"
            android:layout_below="@+id/deleteBottomButton"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:background="@drawable/rounded_button"
            />
    </LinearLayout>
</ScrollView>